@@ -27,6 +27,16 @@
               type: long
               description: >
                 CPU used nanocores
+            - name: node.pct
+              type: scaled_float
+              format: percentage
+              description: >
+                CPU usage as a percentage of the total node allocatable CPU
+            - name: limit.pct
+              type: scaled_float
+              format: percentage
+              description: >
+                CPU usage as a percentage of the defined limit for the container (or total node allocatable CPU if unlimited)
     - name: logs
       type: group
       description: >
@@ -90,6 +100,16 @@
               format: bytes
               description: >
                 Total memory usage
+            - name: node.pct
+              type: scaled_float
+              format: percentage
+              description: >
+                Memory usage as a percentage of the total node allocatable memory
+            - name: limit.pct
+              type: scaled_float
+              format: percentage
+              description: >
+                Memory usage as a percentage of the defined limit for the container (or total node allocatable memory if unlimited)
         - name: rss
           type: group
           fields:
