@@ -7,9 +7,10 @@ import (
 	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/metricbeat/mb"
 	"github.com/elastic/beats/metricbeat/module/kubernetes"
+	"github.com/elastic/beats/metricbeat/module/kubernetes/util"
 )
 
-func eventMapping(content []byte) ([]common.MapStr, error) {
+func eventMapping(content []byte, perfMetrics *util.PerfMetricsCache) ([]common.MapStr, error) {
 	events := []common.MapStr{}
 	var summary kubernetes.Summary
 
@@ -19,6 +20,8 @@ func eventMapping(content []byte) ([]common.MapStr, error) {
 	}
 
 	node := summary.Node
+	nodeCores := perfMetrics.NodeCoresAllocatable.Get(node.NodeName)
+	nodeMem := perfMetrics.NodeMemAllocatable.Get(node.NodeName)
 	for _, pod := range summary.Pods {
 		for _, container := range pod.Containers {
 			containerEvent := common.MapStr{
@@ -93,6 +96,27 @@ func eventMapping(content []byte) ([]common.MapStr, error) {
 					},
 				},
 			}
+
+			if nodeCores > 0 {
+				containerEvent.Put("cpu.usage.node.pct", float64(container.CPU.UsageNanoCores)/1e9/nodeCores)
+			}
+
+			if nodeMem > 0 {
+				containerEvent.Put("memory.usage.node.pct", float64(container.Memory.UsageBytes)/nodeMem)
+			}
+
+			cuid := util.ContainerUID(pod.PodRef.Namespace, pod.PodRef.Name, container.Name)
+			coresLimit := perfMetrics.ContainerCoresLimit.GetWithDefault(cuid, nodeCores)
+			memLimit := perfMetrics.ContainerMemLimit.GetWithDefault(cuid, nodeMem)
+
+			if coresLimit > 0 {
+				containerEvent.Put("cpu.usage.limit.pct", float64(container.CPU.UsageNanoCores)/1e9/coresLimit)
+			}
+
+			if memLimit > 0 {
+				containerEvent.Put("memory.usage.limit.pct", float64(container.Memory.UsageBytes)/memLimit)
+			}
+
 			events = append(events, containerEvent)
 		}
 
